Use quiet option; fix email notifications

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 before_script:
   - npm install jsonlint -g
 script:
-  - jsonlint webextensions/browser-compat-data.json
+  - jsonlint webextensions/browser-compat-data.json --quiet
 notifications:
-email: false
+  email: false
