Addition of a new schema (#170)
* Rename old schema

* Add new schema and its documentation

* Update travis to use the new name of the old schema, and divide the test on several entries to make migration easier

* Add travis test for new schema and webextensions

* Update README to point to the new schema and its documentation

* Remove notice not used anywhere from the schema description

* Don't allow KS in strings

* Additional fixes after review for docs of schema

* Reorder entries in schema and make support mandatory

* Last bits of feedback incorporated in docs

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,11 @@ before_script:
   - npm install ajv-cli -g
 script:
   - find . -name \*.json  | xargs -I {} jsonlint -q {}
-  - ajv validate -s compat-data.schema.json -d "{api/**/*.json,css/**/*.json,http/**/*.json,javascript/**/*.json}"
+  - ajv validate -s compat-data.schema.old.json -d "{api/**/*.json}"
+  - ajv validate -s compat-data.schema.old.json -d "{css/**/*.json}"
+  - ajv validate -s compat-data.schema.old.json -d "{http/**/*.json}"
+  - ajv validate -s compat-data.schema.old.json -d "{javascript/**/*.json}"
   - ajv validate -s webextensions/browser-compat-data.schema.json -d webextensions/browser-compat-data.json
+  - ajv validate -s compat-data.schema.json -d webextensions/javascript-apis.json
 notifications:
   email: false
