Updated manifest key data to the new schema (#189)
* Updated manifest key data to the new schema

* Added compat data for Edge

* Fix permissions.background

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ script:
   - ajv validate -s compat-data.schema.json -d "{css/**/*.json}"
   - ajv validate -s compat-data.schema.old.json -d "{http/**/*.json}"
   - ajv validate -s compat-data.schema.old.json -d "{javascript/**/*.json}"
-  - ajv validate -s compat-data.schema.json -d webextensions/javascript-apis.json
+  - ajv validate -s compat-data.schema.json -d "{webextensions/**/*.json}"
 notifications:
   email: false
