--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ before_script:
   - npm install ajv-cli -g
 script:
   - find . -name \*.json  | xargs -I {} jsonlint -q {}
-  - ajv validate -s compat-data.schema.old.json -d "{api/**/*.json}"
-  - ajv validate -s compat-data.schema.json -d "{css/**/*.json}"
-  - ajv validate -s compat-data.schema.old.json -d "{http/**/*.json}"
-  - ajv validate -s compat-data.schema.old.json -d "{javascript/**/*.json}"
-  - ajv validate -s compat-data.schema.json -d "{webextensions/**/*.json}"
+  - ajv validate -s compat-data.schema.old.json -d "api/**/*.json"
+  - ajv validate -s compat-data.schema.json -d "css/**/*.json"
+  - ajv validate -s compat-data.schema.old.json -d "http/**/*.json"
+  - ajv validate -s compat-data.schema.old.json -d "javascript/**/*.json"
+  - ajv validate -s compat-data.schema.json -d "webextensions/**/*.json"
 notifications:
   email: false
