Have travis also validate sample data

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ script:
   - ajv validate -s compat-data.schema.old.json -d "http/**/*.json"
   - ajv validate -s compat-data.schema.old.json -d "javascript/**/*.json"
   - ajv validate -s compat-data.schema.json -d "webextensions/**/*.json"
+  - ajv validate -s compat-data.schema.json -d "test/sample-data.json"
 notifications:
   email: false
