--- a/webextensions/manifest-keys.json
+++ b/webextensions/manifest-keys.json
@@ -1015,6 +1015,44 @@
                   "version_added": true
                 }
               }
+            },
+            "clipboardRead": {
+              "support": {
+                "chrome": {
+                  "version_added": true
+                },
+                "edge": {
+                  "version_added": false
+                },
+                "firefox": {
+                  "version_added": "54"
+                },
+                "firefox_android": {
+                  "version_added": "54"
+                },
+                "opera": {
+                  "version_added": true
+                }
+              }
+            },
+            "clipboardWrite": {
+              "support": {
+                "chrome": {
+                  "version_added": true
+                },
+                "edge": {
+                  "version_added": false
+                },
+                "firefox": {
+                  "version_added": "51"
+                },
+                "firefox_android": {
+                  "version_added": "51"
+                },
+                "opera": {
+                  "version_added": true
+                }
+              }
             }
           }
         },
