Add data for browser_action support on Firefox for Android

--- a/webextensions/manifest-keys.json
+++ b/webextensions/manifest-keys.json
@@ -102,6 +102,47 @@
             "basic_support": {
               "support": {
                 "chrome": {
+                  "version_added": true
+                },
+                "edge": {
+                  "version_added": true
+                },
+                "firefox": {
+                  "version_added": "48"
+                },
+                "firefox_android": {
+                  "version_added": "55"
+                },
+                "opera": {
+                  "version_added": true
+                }
+              }
+            },
+            "default_title": {
+              "support": {
+                "chrome": {
+                  "version_added": true
+                },
+                "edge": {
+                  "version_added": true
+                },
+                "firefox": {
+                  "version_added": "48"
+                },
+                "firefox_android": {
+                  "version_added": "55",
+                  "notes": [
+                    "Browser actions are presented as menu items, and the title is the menu item's label."
+                  ]
+                },
+                "opera": {
+                  "version_added": true
+                }
+              }
+            },
+            "default_icon": {
+              "support": {
+                "chrome": {
                   "version_added": true,
                   "notes": [
                     "SVG icons are not supported."
@@ -113,6 +154,25 @@
                     "SVG icons are not supported.",
                     "'default_icon' must be an object, with explicit sizes."
                   ]
+                },
+                "firefox": {
+                  "version_added": "48"
+                },
+                "firefox_android": {
+                  "version_added": false
+                },
+                "opera": {
+                  "version_added": true
+                }
+              }
+            },
+            "default_popup": {
+              "support": {
+                "chrome": {
+                  "version_added": true
+                },
+                "edge": {
+                  "version_added": true
                 },
                 "firefox": {
                   "version_added": "48"
