Chrome and firefox support chrome_url_overrides.newtab (#244)
* Chrome and firefox support chrome_url_overrides.newtab

* copy basic_support into newtab

* Remove notes from basic_support

--- a/webextensions/manifest-keys.json
+++ b/webextensions/manifest-keys.json
@@ -291,6 +291,25 @@
             "basic_support": {
               "support": {
                 "chrome": {
+                  "version_added": true
+                },
+                "edge": {
+                  "version_added": false
+                },
+                "firefox": {
+                  "version_added": "54"
+                },
+                "firefox_android": {
+                  "version_added": "54"
+                },
+                "opera": {
+                  "version_added": true
+                }
+              }
+            },
+            "newtab": {
+              "support": {
+                "chrome": {
                   "version_added": true,
                   "notes": [
                     "If two or more add-ons both define a custom new tab page, then in Firefox the first add-on to run wins. In Chrome and Opera, the last add-on wins."
