Remove developer for chrome (#261)
I tried to add this property but got an error in chrome.

--- a/webextensions/manifest-keys.json
+++ b/webextensions/manifest-keys.json
@@ -671,7 +671,7 @@
             "basic_support": {
               "support": {
                 "chrome": {
-                  "version_added": true
+                  "version_added": false
                 },
                 "edge": {
                   "version_added": false
