--- a/webextensions/manifest-keys.json
+++ b/webextensions/manifest-keys.json
@@ -1604,6 +1604,25 @@
                   "version_added": true
                 }
               }
+            },
+            "browser_style": {
+              "support": {
+                "chrome": {
+                  "version_added": false
+                },
+                "edge": {
+                  "version_added": false
+                },
+                "firefox": {
+                  "version_added": "55"
+                },
+                "firefox_android": {
+                  "version_added": false
+                },
+                "opera": {
+                  "version_added": false
+                }
+              }
             }
           }
         },
