--- a/webextensions/manifest-keys.json
+++ b/webextensions/manifest-keys.json
@@ -246,6 +246,25 @@
                 }
               }
             },
+            "homepage": {
+              "support": {
+                "chrome": {
+                  "version_added": true
+                },
+                "edge": {
+                  "version_added": false
+                },
+                "firefox": {
+                  "version_added": "55"
+                },
+                "firefox_android": {
+                  "version_added": false
+                },
+                "opera": {
+                  "version_added": false
+                }
+              }
+            },
             "search_provider": {
               "support": {
                 "chrome": {
