Naming convention changes add-ons -> extensions (#289)

--- a/webextensions/manifest-keys.json
+++ b/webextensions/manifest-keys.json
@@ -616,7 +616,7 @@
                 "chrome": {
                   "version_added": true,
                   "notes": [
-                    "If two or more add-ons both define a custom new tab page, then in Firefox the first add-on to run wins. In Chrome and Opera, the last add-on wins."
+                    "If two or more extensions both define a custom new tab page, then in Firefox the first extension to run wins. In Chrome and Opera, the last extension wins."
                   ]
                 },
                 "edge": {
@@ -625,19 +625,19 @@
                 "firefox": {
                   "version_added": "54",
                   "notes": [
-                    "If two or more add-ons both define a custom new tab page, then in Firefox the first add-on to run wins. In Chrome and Opera, the last add-on wins."
+                    "If two or more extensions both define a custom new tab page, then in Firefox the first extension to run wins. In Chrome and Opera, the last extension wins."
                   ]
                 },
                 "firefox_android": {
                   "version_added": "54",
                   "notes": [
-                    "If two or more add-ons both define a custom new tab page, then in Firefox the first add-on to run wins. In Chrome and Opera, the last add-on wins."
+                    "If two or more extensions both define a custom new tab page, then in Firefox the first extension to run wins. In Chrome and Opera, the last extension wins."
                   ]
                 },
                 "opera": {
                   "version_added": true,
                   "notes": [
-                    "If two or more add-ons both define a custom new tab page, then in Firefox the first add-on to run wins. In Chrome and Opera, the last add-on wins."
+                    "If two or more extensions both define a custom new tab page, then in Firefox the first extension to run wins. In Chrome and Opera, the last extension wins."
                   ]
                 }
               }
