Compatibility information for theme manifest key and API (#293)
* Compatibility information for theme manifest key and API

* Themes version correction

--- a/webextensions/manifest-keys.json
+++ b/webextensions/manifest-keys.json
@@ -1930,6 +1930,29 @@
             }
           }
         },
+        "theme": {
+          "__compat": {
+            "basic_support": {
+              "support": {
+                "chrome": {
+                  "version_added": true
+                },
+                "edge": {
+                  "version_added": false
+                },
+                "firefox": {
+                  "version_added": "55"
+                },
+                "firefox_android": {
+                  "version_added": false
+                },
+                "opera": {
+                  "version_added": false
+                }
+              }
+            }
+          }
+        },
         "version": {
           "__compat": {
             "basic_support": {
