New structure setup (issue 283)
This does a few things:

- It changes the schema:
  - no sub features anymore
  - no "version" or "data" anymore
  - basic_support is now __compat and optional
  - "desc" has been renamed to "description"
- It adds a conversion script for these schema changes
- It adds a render script that emulates the {{compat}} macro
  (rendering only works with the new structure)

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "ajv": "^5.0.1"
   },
   "scripts": {
+    "convert": "node test/convert",
     "lint": "node test/lint",
+    "render": "node test/render",
     "test": "npm run lint"
   }
 }
