--- a/webextensions/manifest-keys.json
+++ b/webextensions/manifest-keys.json
@@ -1754,10 +1754,10 @@
                   "version_added": true
                 },
                 "firefox": {
-                  "version_added": false
+                  "version_added": "56"
                 },
                 "firefox_android": {
-                  "version_added": false
+                  "version_added": "56"
                 },
                 "opera": {
                   "version_added": true
