--- a/webextensions/manifest-keys.json
+++ b/webextensions/manifest-keys.json
@@ -1862,6 +1862,25 @@
                   "version_added": false
                 }
               }
+            },
+            "gopher": {
+              "support": {
+                "chrome": {
+                  "version_added": false
+                },
+                "edge": {
+                  "version_added": false
+                },
+                "firefox": {
+                  "version_added": "56"
+                },
+                "firefox_android": {
+                  "version_added": "56"
+                },
+                "opera": {
+                  "version_added": false
+                }
+              }
             }
           }
         },
