Is default optin (#535)
* Document new is_default behavior

* opt-in to -> opt into

--- a/webextensions/manifest/chrome_settings_overrides.json
+++ b/webextensions/manifest/chrome_settings_overrides.json
@@ -221,7 +221,7 @@
                 "firefox": {
                   "version_added": "57",
                   "notes": [
-                    "Only built-in engines can be set as default."
+                    "The user is asked to opt into the default search change unless it is a built-in engine."
                   ]
                 },
                 "firefox_android": {
