--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "scripts": {
     "lint": "node test/lint",
     "render": "node test/render",
+    "show-errors": "npm test 1> /dev/null",
     "test": "npm run lint"
   }
 }
