Update branding to MDN Web Docs (#901)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mdn-browser-compat-data",
   "version": "0.0.20",
-  "description": "Browser compatibility data provided by the Mozilla Developer Network",
+  "description": "Browser compatibility data provided by MDN Web Docs",
   "main": "index.js",
   "dependencies": {
     "extend": "3.0.1"
@@ -18,7 +18,7 @@
     "mdn",
     "mozilla"
   ],
-  "author": "Mozilla Developer Network",
+  "author": "MDN Web Docs",
   "license": "CC0-1.0",
   "bugs": {
     "url": "https://github.com/mdn/browser-compat-data/issues"
