Mirror IE + Chrome -> Edge for html/ (#5559)

--- a/html/elements/applet.json
+++ b/html/elements/applet.json
@@ -15,7 +15,7 @@
             },
             "edge": {
               "version_added": "12",
-              "notes": "Removal in Edge is <a href='https://developer.microsoft.com/microsoft-edge/platform/issues/11946645/'>under consideration</a>."
+              "version_removed": "79"
             },
             "firefox": {
               "version_added": true,
@@ -69,7 +69,8 @@
                 "version_removed": "47"
               },
               "edge": {
-                "version_added": "12"
+                "version_added": "12",
+                "version_removed": "79"
               },
               "firefox": {
                 "version_added": true,
@@ -123,7 +124,8 @@
                 "version_removed": "47"
               },
               "edge": {
-                "version_added": "12"
+                "version_added": "12",
+                "version_removed": "79"
               },
               "firefox": {
                 "version_added": true,
@@ -177,7 +179,8 @@
                 "version_removed": "47"
               },
               "edge": {
-                "version_added": "12"
+                "version_added": "12",
+                "version_removed": "79"
               },
               "firefox": {
                 "version_added": true,
@@ -231,7 +234,8 @@
                 "version_removed": "47"
               },
               "edge": {
-                "version_added": "12"
+                "version_added": "12",
+                "version_removed": "79"
               },
               "firefox": {
                 "version_added": true,
@@ -285,7 +289,8 @@
                 "version_removed": "47"
               },
               "edge": {
-                "version_added": "12"
+                "version_added": "12",
+                "version_removed": "79"
               },
               "firefox": {
                 "version_added": true,
@@ -339,7 +344,8 @@
                 "version_removed": "47"
               },
               "edge": {
-                "version_added": "12"
+                "version_added": "12",
+                "version_removed": "79"
               },
               "firefox": {
                 "version_added": true,
@@ -393,7 +399,8 @@
                 "version_removed": "47"
               },
               "edge": {
-                "version_added": "12"
+                "version_added": "12",
+                "version_removed": "79"
               },
               "firefox": {
                 "version_added": true,
@@ -447,7 +454,8 @@
                 "version_removed": "47"
               },
               "edge": {
-                "version_added": "12"
+                "version_added": "12",
+                "version_removed": "79"
               },
               "firefox": {
                 "version_added": true,
@@ -501,7 +509,8 @@
                 "version_removed": "47"
               },
               "edge": {
-                "version_added": "12"
+                "version_added": "12",
+                "version_removed": "79"
               },
               "firefox": {
                 "version_added": true,
@@ -555,7 +564,8 @@
                 "version_removed": "47"
               },
               "edge": {
-                "version_added": "12"
+                "version_added": "12",
+                "version_removed": "79"
               },
               "firefox": {
                 "version_added": true,
@@ -609,7 +619,8 @@
                 "version_removed": "47"
               },
               "edge": {
-                "version_added": "12"
+                "version_added": "12",
+                "version_removed": "79"
               },
               "firefox": {
                 "version_added": true,
@@ -663,7 +674,8 @@
                 "version_removed": "47"
               },
               "edge": {
-                "version_added": "12"
+                "version_added": "12",
+                "version_removed": "79"
               },
               "firefox": {
                 "version_added": true,
@@ -717,7 +729,8 @@
                 "version_removed": "47"
               },
               "edge": {
-                "version_added": "12"
+                "version_added": "12",
+                "version_removed": "79"
               },
               "firefox": {
                 "version_added": true,
@@ -771,7 +784,8 @@
                 "version_removed": "47"
               },
               "edge": {
-                "version_added": "12"
+                "version_added": "12",
+                "version_removed": "79"
               },
               "firefox": {
                 "version_added": true,
@@ -825,7 +839,8 @@
                 "version_removed": "47"
               },
               "edge": {
-                "version_added": "12"
+                "version_added": "12",
+                "version_removed": "79"
               },
               "firefox": {
                 "version_added": true,
