Update support for CSS property appearance (#6460)

--- a/css/properties/appearance.json
+++ b/css/properties/appearance.json
@@ -5,21 +5,36 @@
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/CSS/appearance",
           "support": {
-            "chrome": {
-              "version_added": "1",
-              "partial_implementation": true,
-              "prefix": "-webkit-"
-            },
-            "chrome_android": {
-              "version_added": "18",
-              "partial_implementation": true,
-              "prefix": "-webkit-"
-            },
-            "edge": {
-              "version_added": "12",
-              "partial_implementation": true,
-              "prefix": "-webkit-"
-            },
+            "chrome": [
+              {
+                "version_added": "84"
+              },
+              {
+                "version_added": "1",
+                "partial_implementation": true,
+                "prefix": "-webkit-"
+              }
+            ],
+            "chrome_android": [
+              {
+                "version_added": "84"
+              },
+              {
+                "version_added": "18",
+                "partial_implementation": true,
+                "prefix": "-webkit-"
+              }
+            ],
+            "edge": [
+              {
+                "version_added": "84"
+              },
+              {
+                "version_added": "12",
+                "partial_implementation": true,
+                "prefix": "-webkit-"
+              }
+            ],
             "firefox": [
               {
                 "version_added": "1",
@@ -71,11 +86,16 @@
             "ie": {
               "version_added": false
             },
-            "opera": {
-              "version_added": "15",
-              "partial_implementation": true,
-              "prefix": "-webkit-"
-            },
+            "opera": [
+              {
+                "version_added": "70"
+              },
+              {
+                "version_added": "15",
+                "partial_implementation": true,
+                "prefix": "-webkit-"
+              }
+            ],
             "opera_android": {
               "version_added": "14",
               "partial_implementation": true,
@@ -96,11 +116,16 @@
               "partial_implementation": true,
               "prefix": "-webkit-"
             },
-            "webview_android": {
-              "version_added": "1",
-              "partial_implementation": true,
-              "prefix": "-webkit-"
-            }
+            "webview_android": [
+              {
+                "version_added": "84"
+              },
+              {
+                "version_added": "1",
+                "partial_implementation": true,
+                "prefix": "-webkit-"
+              }
+            ]
           },
           "status": {
             "experimental": true,
@@ -112,13 +137,13 @@
           "__compat": {
             "support": {
               "chrome": {
-                "version_added": false
+                "version_added": "83"
               },
               "chrome_android": {
-                "version_added": false
+                "version_added": "83"
               },
               "edge": {
-                "version_added": false
+                "version_added": "83"
               },
               "firefox": {
                 "version_added": false
@@ -130,7 +155,7 @@
                 "version_added": false
               },
               "opera": {
-                "version_added": false
+                "version_added": "69"
               },
               "opera_android": {
                 "version_added": false
@@ -145,7 +170,7 @@
                 "version_added": false
               },
               "webview_android": {
-                "version_added": false
+                "version_added": "83"
               }
             },
             "status": {
