Publish package with GitHub Actions workflow (#6671)
* Add release artifact generation workflow

* Remove npm deploy from Travis

* Update docs for publishing the new package

* Rename package workflow to release

* Drop artifact handling

* Publish to npm

* Support releasing scoped package

* Remove unnecesary environment variable

* Capture release published event instead of tag

* Make me the release coordinator 😢

* Revise publishing docs for new workflow

* Use same Node.js version across all workflows

* Fix typo

Co-authored-by: Peter Bengtsson <peterbe@mozilla.com>

* Use actions/setup-node@v2

* Don't use matrix for package releases

* Add note about NPM_TOKEN

* Remove superfluous version text

Co-authored-by: Peter Bengtsson <peterbe@mozilla.com>

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,12 +16,13 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ 10.x ]
+        # TODO: hoist to 10.x when we bump the version supported in #5931
+        node-version: [ 8.x ]
 
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2-beta
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
