--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,13 +1,11 @@
 # See GOVERNANCE.md for more about this repository's owners and this project's
 # governance.
 
-/webextensions/ @wbamberg
-
 # Schema, linter and infrastructure changes must be reviewed by an owner:
 # ======================================================================
-/test/    @Elchi3
-/schemas/ @Elchi3
-/.github/ @Elchi3
+/test/    @ddbeck
+/schemas/ @ddbeck
+/.github/ @ddbeck
 
 ## This pattern will only match files in the root directory:
-/*        @Elchi3
+/*        @ddbeck
